--- a/chokotei_report.html
+++ b/chokotei_report.html
@@ -31,12 +31,42 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             padding: 20px;
-            text-align: center;
+            /* ★ 右上にボタンを置くためにフレックス化 */
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            gap: 10px;
+        }
+
+        .header-main {
+            flex: 1;
         }
 
         .header h1 {
             font-size: 24px;
             margin-bottom: 5px;
+        }
+
+        .header-actions {
+            flex-shrink: 0;
+        }
+
+        /* ★ 右上リンクボタン */
+        .header-link-btn {
+            display: inline-block;
+            padding: 6px 12px;
+            border-radius: 999px;
+            border: 1px solid rgba(255,255,255,0.9);
+            background: rgba(255,255,255,0.15);
+            color: #fff;
+            font-size: 12px;
+            font-weight: bold;
+            text-decoration: none;
+            white-space: nowrap;
+        }
+
+        .header-link-btn:hover {
+            background: rgba(255,255,255,0.3);
         }
 
         .nav-tabs {
@@ -330,8 +360,21 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>⚡ チョコ停記録アプリ</h1>
-            <p>設備異常の即時記録・可視化システム</p>
+            <div class="header-main">
+                <h1>⚡ チョコ停記録アプリ</h1>
+                <p>設備異常の即時記録・可視化システム</p>
+            </div>
+            <div class="header-actions">
+                <!-- ★ 右上リンクボタン -->
+                <a
+                    href="https://motsu922.github.io/testpage/abnreports.html"
+                    class="header-link-btn"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
+                    異常履歴アプリ
+                </a>
+            </div>
         </div>
 
         <div class="nav-tabs">
