--- a/chokotei_report.html
+++ b/chokotei_report.html
@@ -361,8 +361,7 @@
     <div class="container">
         <div class="header">
             <div class="header-main">
-                <h1>⚡ チョコ停記録アプリ</h1>
-                <p>設備異常の即時記録・可視化システム</p>
+                <h1>チョコ停記録</h1>
             </div>
             <div class="header-actions">
                 <!-- ★ 右上リンクボタン -->
