abnreports.html を更新

--- a/abnreports.html
+++ b/abnreports.html
@@ -355,7 +355,31 @@
   color:#1b5e20;
 }
 
+.recurrence-badge {
+  display:inline-block;
+  padding: 2px 8px;
+  border-radius: 999px;
+  font-size: 0.75rem;
+  font-weight: 600;
+}
 
+/* 新規 */
+.recurrence-new {
+  background: #e0f2fe;
+  color: #0369a1;
+}
+
+/* 再発 */
+.recurrence-repeat {
+  background: #fee2e2;
+  color: #b91c1c;
+}
+
+/* 調節 */
+.recurrence-adjust {
+  background: #fef9c3;
+  color: #854d0e;
+}
 </style>
 </head>
 <body>
@@ -2562,10 +2586,28 @@ function renderHistory(){
         ? `<div class="stop-badge ${badgeCls}">停止：${stopMin}分</div>`
         : '';
   const recurrenceBadge = item.recurrenceType
-    ? `<div class="recurrence-badge recurrence-${item.recurrenceType === '再発' ? 'repeat' : 'new'}">
-         ${item.recurrenceType === '再発' ? '再発' : '新規'}
-       </div>`
-    : '';
+  ? (() => {
+      let label;
+      let cls;
+
+      if (item.recurrenceType === '再発') {
+        label = '再発';
+        cls = 'recurrence-repeat';
+      } else if (item.recurrenceType === '調節') {
+        label = '調節';
+        cls = 'recurrence-adjust';
+      } else {
+        // それ以外は一旦「新規」として扱う
+        label = '新規';
+        cls = 'recurrence-new';
+      }
+
+      return `
+        <div class="recurrence-badge ${cls}">
+          ${label}
+        </div>`;
+    })()
+  : '';
       const leftHtml = `
         <div class="card-left">
           <div class="card-id">${item.serialNo || '(No ID)'}</div>
