--- a/koumu_ijou.html
+++ b/koumu_ijou.html
@@ -1083,6 +1083,30 @@
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
         import { getDatabase, ref, push, set, onValue, remove, update } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js';
         import { getStorage, ref as storageRef, uploadBytes, getDownloadURL, deleteObject } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js';
+import { getAuth, signInAnonymously, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
+
+const auth = getAuth(app);
+
+// 匿名認証で自動ログイン
+signInAnonymously(auth)
+  .then(() => {
+    console.log('認証成功');
+  })
+  .catch((error) => {
+    console.error('認証エラー:', error);
+    alert('認証に失敗しました。アプリを使用できません。');
+  });
+
+// 認証状態の監視
+onAuthStateChanged(auth, (user) => {
+  if (user) {
+    console.log('ログイン中:', user.uid);
+    isFirebaseConnected = true;
+  } else {
+    console.log('未ログイン');
+    isFirebaseConnected = false;
+  }
+});
 
         // Firebase設定（miyamaunitec-fb87aプロジェクト用）
         const firebaseConfig = {
