--- a/qcreport.html
+++ b/qcreport.html
@@ -501,6 +501,652 @@
         padding: 1rem;
       }
     }
+    * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* ベースカラー・共通 */
+:root {
+  --bg-body: #f3f4f6;
+  --bg-card: #ffffff;
+  --bg-muted: #f9fafb;
+  --border-subtle: #e5e7eb;
+  --shadow-soft: 0 8px 20px rgba(15, 23, 42, 0.08);
+
+  --ink-main: #111827;
+  --ink-sub: #6b7280;
+
+  --primary: #2563eb;
+  --primary-soft: #dbeafe;
+  --primary-dark: #1d4ed8;
+
+  --success: #16a34a;
+  --success-soft: #dcfce7;
+  --danger: #ef4444;
+  --danger-soft: #fee2e2;
+  --secondary: #6b7280;
+
+  --radius-sm: 8px;
+  --radius-md: 12px;
+  --radius-lg: 18px;
+}
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Noto Sans JP", sans-serif;
+  background-color: var(--bg-body);
+  color: var(--ink-main);
+  line-height: 1.6;
+  font-size: 15px;
+}
+
+/* ページ切り替え */
+.page {
+  display: none;
+}
+
+.page.active {
+  display: block;
+}
+
+/* ヘッダー */
+header {
+  position: sticky;
+  top: 0;
+  z-index: 20;
+  background-color: #0f172a;
+  color: #f9fafb;
+  padding: 0.75rem 1rem;
+  box-shadow: 0 2px 8px rgba(15, 23, 42, 0.4);
+}
+
+.header-content {
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+header h1 {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  font-size: 0.85rem;
+}
+
+/* ナビタブ */
+nav {
+  margin-top: 0.3rem;
+}
+
+nav a {
+  color: #e5e7eb;
+  text-decoration: none;
+  margin-right: 0.8rem;
+  font-size: 0.85rem;
+  opacity: 0.85;
+  cursor: pointer;
+  padding-bottom: 0.2rem;
+  border-bottom: 2px solid transparent;
+}
+
+nav a:hover {
+  opacity: 1;
+  border-bottom-color: #93c5fd;
+}
+
+/* コンテナ */
+.container {
+  max-width: 1000px;
+  margin: 1.25rem auto 1.5rem;
+  padding: 0 0.75rem;
+}
+
+/* カード */
+.card {
+  background: var(--bg-card);
+  border-radius: var(--radius-md);
+  padding: 1rem 1.1rem;
+  margin-bottom: 0.9rem;
+  box-shadow: var(--shadow-soft);
+  border: 1px solid rgba(148, 163, 184, 0.25);
+}
+
+/* ボタン */
+.btn {
+  padding: 0.55rem 1.1rem;
+  border: none;
+  border-radius: 999px;
+  cursor: pointer;
+  font-size: 0.85rem;
+  font-weight: 500;
+  transition: all 0.15s ease-out;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 40px;
+  white-space: nowrap;
+}
+
+.btn:active {
+  transform: translateY(1px);
+  filter: brightness(0.97);
+}
+
+.btn-primary {
+  background-color: var(--primary);
+  color: #ffffff;
+}
+
+.btn-primary:hover {
+  background-color: var(--primary-dark);
+}
+
+.btn-success {
+  background-color: var(--success);
+  color: #ffffff;
+}
+
+.btn-success:hover {
+  background-color: #15803d;
+}
+
+.btn-danger {
+  background-color: var(--danger);
+  color: #ffffff;
+}
+
+.btn-danger:hover {
+  background-color: #b91c1c;
+}
+
+.btn-secondary {
+  background-color: #4b5563;
+  color: #f9fafb;
+}
+
+.btn-secondary:hover {
+  background-color: #374151;
+}
+
+.btn-small {
+  padding: 0.35rem 0.9rem;
+  font-size: 0.8rem;
+  min-height: 34px;
+}
+
+/* フォーム */
+.form-group {
+  margin-bottom: 0.9rem;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 0.25rem;
+  font-weight: 500;
+  color: var(--ink-sub);
+  font-size: 0.85rem;
+}
+
+.form-group input,
+.form-group select,
+.form-group textarea {
+  width: 100%;
+  padding: 0.6rem 0.7rem;
+  border: 1px solid var(--border-subtle);
+  border-radius: 10px;
+  font-size: 0.9rem;
+  font-family: inherit;
+  background-color: #ffffff;
+}
+
+.form-group input:focus,
+.form-group select:focus,
+.form-group textarea:focus {
+  outline: none;
+  border-color: var(--primary);
+  box-shadow: 0 0 0 1px rgba(37, 99, 235, 0.15);
+}
+
+.form-group textarea {
+  resize: vertical;
+  min-height: 80px;
+}
+
+/* ステータスバッジ */
+.status-badge {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.25rem 0.65rem;
+  border-radius: 999px;
+  font-size: 0.75rem;
+  font-weight: 600;
+}
+
+.status-inProgress {
+  background-color: #fef3c7;
+  color: #92400e;
+}
+
+.status-completed {
+  background-color: #dcfce7;
+  color: #166534;
+}
+
+/* ステップ状態 */
+.step-state {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.2rem 0.5rem;
+  border-radius: 999px;
+  font-size: 0.75rem;
+  font-weight: 600;
+}
+
+.state-notStarted {
+  background-color: #e5e7eb;
+  color: #4b5563;
+}
+
+.state-inProgress {
+  background-color: #fef3c7;
+  color: #92400e;
+}
+
+.state-completed {
+  background-color: #dcfce7;
+  color: #166534;
+}
+
+/* プログレスバー */
+.progress-bar {
+  width: 100%;
+  height: 10px;
+  background-color: #e5e7eb;
+  border-radius: 999px;
+  overflow: hidden;
+  margin: 0.4rem 0 0.15rem;
+}
+
+.progress-fill {
+  height: 100%;
+  background: linear-gradient(90deg, #22c55e, #16a34a);
+  transition: width 0.25s ease-out;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  color: #ffffff;
+  font-size: 0.7rem;
+  font-weight: 600;
+  padding-right: 0.4rem;
+}
+
+/* 案件リスト */
+.case-list {
+  list-style: none;
+}
+
+.case-item {
+  background: var(--bg-card);
+  border-radius: var(--radius-md);
+  padding: 0.85rem 0.9rem;
+  margin-bottom: 0.75rem;
+  box-shadow: var(--shadow-soft);
+  border: 1px solid rgba(148, 163, 184, 0.25);
+  cursor: pointer;
+  transition: transform 0.12s ease-out, box-shadow 0.12s ease-out,
+    border-color 0.12s ease-out;
+}
+
+.case-item:hover {
+  box-shadow: 0 10px 24px rgba(15, 23, 42, 0.12);
+  transform: translateY(-1px);
+  border-color: #93c5fd;
+}
+
+.case-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.35rem;
+  gap: 0.5rem;
+}
+
+.case-name {
+  font-size: 1rem;
+  font-weight: 600;
+  color: #111827;
+}
+
+.case-info {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.6rem;
+  font-size: 0.8rem;
+  color: var(--ink-sub);
+  margin-bottom: 0.3rem;
+}
+
+/* ステップリスト */
+.step-list {
+  list-style: none;
+}
+
+.step-item {
+  background: var(--bg-muted);
+  border-radius: var(--radius-md);
+  padding: 0.85rem;
+  margin-bottom: 0.7rem;
+  border-left: 4px solid #d1d5db;
+}
+
+.step-item.completed {
+  border-left-color: var(--success);
+  background-color: #ecfdf3;
+}
+
+.step-item.inProgress {
+  border-left-color: #facc15;
+  background-color: #fffbeb;
+}
+
+.step-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.35rem;
+  gap: 0.4rem;
+}
+
+.step-name {
+  font-weight: 600;
+  color: #111827;
+  font-size: 0.9rem;
+}
+
+.step-controls {
+  display: flex;
+  gap: 0.4rem;
+  flex-wrap: wrap;
+  margin-top: 0.45rem;
+}
+
+.step-info {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.6rem;
+  font-size: 0.8rem;
+  color: var(--ink-sub);
+  margin-top: 0.35rem;
+}
+
+/* 管理画面用 */
+.step-item-admin {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  background: var(--bg-muted);
+  padding: 0.8rem 0.9rem;
+  border-radius: var(--radius-md);
+  margin-bottom: 0.5rem;
+}
+
+.step-order {
+  font-weight: 600;
+  color: #6b7280;
+  min-width: 26px;
+  text-align: center;
+}
+
+.step-content {
+  flex: 1;
+}
+
+.step-actions {
+  display: flex;
+  gap: 0.3rem;
+  flex-wrap: wrap;
+}
+
+/* モーダル */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 50;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(15, 23, 42, 0.45);
+  backdrop-filter: blur(4px);
+}
+
+.modal.active {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background-color: #ffffff;
+  padding: 1.3rem 1.2rem 1.1rem;
+  border-radius: var(--radius-lg);
+  max-width: 640px;
+  width: 92%;
+  max-height: 90vh;
+  overflow-y: auto;
+  box-shadow: 0 18px 48px rgba(15, 23, 42, 0.35);
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.9rem;
+  gap: 0.5rem;
+}
+
+.modal-header h2 {
+  margin: 0;
+  color: #111827;
+  font-size: 1.05rem;
+}
+
+.close-modal {
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: #9ca3af;
+  padding: 0;
+  line-height: 1;
+}
+
+.close-modal:hover {
+  color: #4b5563;
+}
+
+/* ユーティリティ */
+.flex {
+  display: flex;
+}
+
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.gap-1 {
+  gap: 1rem;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.loading {
+  text-align: center;
+  padding: 2rem 0;
+  color: var(--ink-sub);
+  font-size: 0.9rem;
+}
+
+.alert {
+  padding: 0.7rem 0.8rem;
+  border-radius: 999px;
+  margin-bottom: 0.8rem;
+  font-size: 0.85rem;
+}
+
+.alert-success {
+  background-color: var(--success-soft);
+  color: #166534;
+  border: 1px solid #bbf7d0;
+}
+
+.alert-error {
+  background-color: var(--danger-soft);
+  color: #991b1b;
+  border: 1px solid #fecaca;
+}
+
+/* ログイン画面 */
+.login-container {
+  max-width: 420px;
+  margin: 3.5rem auto;
+  padding: 0 0.75rem;
+}
+
+.login-header {
+  text-align: center;
+  margin-bottom: 1.6rem;
+}
+
+.login-header h1 {
+  color: #111827;
+  margin-bottom: 0.3rem;
+  font-size: 1.25rem;
+}
+
+.login-header p {
+  color: var(--ink-sub);
+  font-size: 0.85rem;
+}
+
+/* スマホ対応 */
+@media (max-width: 768px) {
+  header {
+    padding: 0.6rem 0.75rem;
+  }
+
+  .header-content {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  header h1 {
+    font-size: 1rem;
+  }
+
+  nav {
+    width: 100%;
+    overflow-x: auto;
+    padding-bottom: 0.1rem;
+  }
+
+  nav a {
+    font-size: 0.8rem;
+    margin-right: 0.8rem;
+  }
+
+  .container {
+    margin-top: 0.9rem;
+    padding: 0 0.6rem;
+  }
+
+  .card {
+    padding: 0.85rem 0.9rem;
+    border-radius: 10px;
+  }
+
+  .case-item {
+    padding: 0.8rem 0.9rem;
+  }
+
+  .case-info {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .step-header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .step-controls {
+    flex-direction: column;
+  }
+
+  .step-controls .btn {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .flex-between {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 0.6rem;
+  }
+
+  .flex-between > * {
+    width: 100%;
+  }
+
+  .modal-content {
+    width: 100%;
+    height: 100vh;
+    max-height: 100vh;
+    border-radius: 0;
+    padding: 1rem 0.9rem 1rem;
+  }
+
+  .login-container {
+    margin-top: 2.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  body {
+    font-size: 14px;
+  }
+
+  .btn {
+    font-size: 0.8rem;
+  }
+
+  .case-name {
+    font-size: 0.95rem;
+  }
+
+  .step-name {
+    font-size: 0.85rem;
+  }
+}
+
   </style>
 </head>
 <body>
