--- a/qcreport.html
+++ b/qcreport.html
@@ -387,7 +387,7 @@
 
       nav button {
         font-size: 0.75rem;
-        padding: 0.3rem 0.5rem;
+        padding: 0.4rem 0.6rem;
       }
 
       /* グリッド */
@@ -397,29 +397,34 @@
 
       /* ボタン */
       .btn {
-        padding: 0.5rem 0.75rem;
-        font-size: 0.8rem;
+        padding: 0.6rem 0.8rem;
+        font-size: 0.85rem;
+        min-height: 44px;
       }
 
       .btn-small {
-        padding: 0.4rem 0.6rem;
-        font-size: 0.75rem;
+        padding: 0.5rem 0.7rem;
+        font-size: 0.8rem;
+        min-height: 40px;
       }
 
       /* フォーム */
       input, textarea, select {
         font-size: 16px; /* iOS zoom防止 */
+        padding: 0.6rem;
       }
 
       label {
-        font-size: 0.8rem;
+        font-size: 0.85rem;
+        margin-bottom: 0.3rem;
       }
 
       /* モーダル */
       .modal-content {
         width: 95%;
-        max-height: 85vh;
-        margin: 1rem auto;
+        max-width: 95vw;
+        max-height: 90vh;
+        margin: 0.5rem auto;
       }
 
       .modal-header h3 {
@@ -428,10 +433,16 @@
 
       .modal-body {
         padding: 0.75rem;
+        max-height: calc(90vh - 120px);
+        overflow-y: auto;
       }
 
       .modal-footer {
         padding: 0.75rem;
+        position: sticky;
+        bottom: 0;
+        background: white;
+        border-top: 1px solid #eee;
       }
 
       /* テーブル */
@@ -445,8 +456,9 @@
 
       /* タブ */
       .tab {
-        font-size: 0.8rem;
-        padding: 0.4rem 0.6rem;
+        font-size: 0.85rem;
+        padding: 0.5rem 0.7rem;
+        min-height: 44px;
       }
 
       /* タイトル */
@@ -458,63 +470,75 @@
         font-size: 0.95rem !important;
       }
 
-      /* 案件詳細のレイアウト */
-      .flex-between {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 0.5rem;
-      }
-
-      .flex-between > div:last-child {
+      /* 案件情報カードのボタン配置 */
+      .card .flex-between > div:last-child {
         width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 0.25rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 0.3rem;
       }
 
-      .flex-between button {
-        flex: 1;
-        min-width: 80px;
-      }
-
-      /* 在庫場所コンテンツ */
-      #locationContent .flex-between {
-        flex-direction: column !important;
-      }
-
-      #locationContent .flex-between > div:first-child {
+      .card .flex-between > div:last-child button {
         width: 100%;
-      }
-
-      #locationContent .flex-between > div:last-child {
-        width: 100%;
-        display: flex;
-        gap: 0.25rem;
-      }
-
-      #locationContent .flex-between button {
-        flex: 1;
-        font-size: 0.7rem;
-        padding: 0.4rem 0.3rem;
         white-space: nowrap;
       }
 
+      .card .flex-between > div:last-child button:first-child {
+        grid-column: 1 / -1;
+      }
+
+      /* 在庫場所コンテンツ */
+      #locationContent > div:first-child > div:first-child {
+        flex-direction: column !important;
+        align-items: stretch !important;
+      }
+
+      #locationContent > div:first-child > div:first-child > div:first-child {
+        width: 100% !important;
+        margin-bottom: 0.5rem;
+      }
+
+      #locationContent > div:first-child > div:first-child > div:last-child {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0.3rem;
+      }
+
+      #locationContent > div:first-child > div:first-child > div:last-child button {
+        font-size: 0.75rem;
+        padding: 0.5rem 0.3rem;
+        white-space: nowrap;
+      }
+
+      #locationContent > div:first-child > div:first-child > div:last-child button:first-child {
+        grid-column: 1 / -1;
+      }
+
       /* テーブルスクロール対応 */
+      .table-wrapper {
+        margin: 0;
+        padding: 0;
+      }
+
       table {
         display: block;
         overflow-x: auto;
         white-space: nowrap;
       }
 
-      thead, tbody, tr {
+      thead, tbody {
         display: table;
         width: 100%;
-        table-layout: fixed;
+      }
+
+      tr {
+        display: table-row;
       }
 
       /* 進捗カード */
       #stepsProgress .card {
-        padding: 0.4rem;
+        padding: 0.5rem;
       }
 
       #stepsProgress .card > div:first-child {
@@ -522,13 +546,14 @@
       }
 
       #stepsProgress .card > div:last-child {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
       }
 
       /* 連絡事項 */
       #whiteboardText {
         min-height: 150px !important;
-        font-size: 16px !important; /* iOS zoom防止 */
+        font-size: 16px !important;
+        padding: 0.6rem !important;
       }
 
       #whiteboardPhotosList {
@@ -542,29 +567,69 @@
       /* バッジ */
       .badge {
         font-size: 0.7rem;
-        padding: 0.15rem 0.4rem;
+        padding: 0.2rem 0.4rem;
       }
 
       /* アラート */
       .alert {
         font-size: 0.85rem;
-        padding: 0.6rem 0.8rem;
+        padding: 0.7rem 0.9rem;
         top: 0.5rem;
         right: 0.5rem;
         left: 0.5rem;
+        max-width: calc(100% - 1rem);
       }
 
       /* ダッシュボードカード */
       #incompleteSteps > div,
       #incompleteInspections > div {
-        padding: 0.6rem;
-        font-size: 0.8rem;
+        padding: 0.75rem;
+        font-size: 0.85rem;
+      }
+
+      /* ダッシュボード - 未完了ステップのチェックボックス */
+      #incompleteSteps input[type="checkbox"] {
+        width: 18px;
+        height: 18px;
+        flex-shrink: 0;
+      }
+
+      /* ダッシュボード - 選別未完了のボタン配置 */
+      #incompleteInspections > div > div:last-child {
+        display: grid !important;
+        grid-template-columns: auto 1fr auto;
+        gap: 0.3rem;
+        width: 100%;
+      }
+
+      #incompleteInspections label {
+        grid-column: 1;
+      }
+
+      #incompleteInspections > div > div:last-child > button:first-of-type {
+        grid-column: 2;
+      }
+
+      #incompleteInspections > div > div:last-child > button:last-of-type {
+        grid-column: 3;
       }
 
       /* 案件一覧カード */
       #casesList .card,
       #dashCasesList > div {
         padding: 0.6rem;
+      }
+
+      #casesList .flex-between,
+      #dashCasesList .flex-between {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.5rem;
+      }
+
+      #casesList .flex-between > div,
+      #dashCasesList .flex-between > div {
+        width: 100%;
       }
 
       /* タブコンテンツのマージン調整 */
@@ -575,8 +640,8 @@
       /* 写真プレビュー */
       #inspectionPhotoPreview img,
       #casePhotoPreview img {
-        width: 60px !important;
-        height: 60px !important;
+        width: 70px !important;
+        height: 70px !important;
       }
 
       /* ステップテンプレートリスト */
@@ -584,18 +649,60 @@
         padding: 0.6rem;
       }
 
+      #stepTemplateList .flex-between {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.5rem;
+      }
+
+      #stepTemplateList button {
+        width: 100%;
+      }
+
+      /* ステップリスト */
+      #stepsList > div {
+        padding: 0.6rem !important;
+      }
+
+      #stepsList .flex-between {
+        flex-direction: column !important;
+        align-items: flex-start !important;
+        gap: 0.5rem;
+      }
+
+      #stepsList button {
+        width: 100%;
+      }
+
       /* タッチ操作しやすく */
-      button, a, .tab, input[type="checkbox"] {
-        min-height: 44px; /* タッチターゲット推奨サイズ */
+      button, a, .tab {
+        min-height: 44px;
         display: inline-flex;
         align-items: center;
         justify-content: center;
       }
 
       input[type="checkbox"] {
-        width: 20px;
-        height: 20px;
-        min-height: auto;
+        min-width: 20px;
+        min-height: 20px;
+      }
+
+      /* モーダル内のボタン */
+      .modal-footer button {
+        flex: 1;
+        min-width: 100px;
+      }
+
+      /* フォームグループのマージン */
+      .form-group {
+        margin-bottom: 0.75rem;
+      }
+
+      /* 案件詳細の戻るボタン */
+      #caseDetailPage > .container > button {
+        width: 100%;
+        margin-bottom: 0.75rem;
+        justify-content: center;
       }
     }
 
@@ -615,7 +722,7 @@
 
       nav button {
         font-size: 0.7rem;
-        padding: 0.25rem 0.4rem;
+        padding: 0.3rem 0.5rem;
       }
 
       table {
@@ -624,6 +731,16 @@
 
       th, td {
         padding: 0.3rem 0.15rem;
+      }
+
+      .btn {
+        font-size: 0.8rem;
+        padding: 0.5rem 0.6rem;
+      }
+
+      .btn-small {
+        font-size: 0.75rem;
+        padding: 0.4rem 0.5rem;
       }
     }
   </style>
@@ -726,7 +843,8 @@
             <div class="card mb-1">
               <div class="flex-between mb-1">
                 <h3 style="font-size: 1.1rem;">案件情報</h3>
-                <div style="display: flex; gap: 0.5rem;">
+                <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
+                  <button onclick="showModal('addLocationModal')" class="btn btn-primary btn-small">+ 在庫場所</button>
                   <button onclick="toggleCaseStatus()" id="caseStatusBtn" class="btn btn-small">完了にする</button>
                   <button onclick="showModal('editCaseModal')" class="btn btn-secondary btn-small">編集</button>
                 </div>
@@ -777,9 +895,8 @@
 
           <!-- 選別実績タブ -->
           <div id="inspectionTab" class="tab-content" style="display: block;">
-            <div class="flex-between mb-1" style="margin-top: 1rem;">
-              <h3 style="font-size: 1.1rem;">選別実績</h3>
-              <button onclick="showModal('addLocationModal')" class="btn btn-primary btn-small">+ 在庫場所追加</button>
+            <div style="margin-top: 1rem;">
+              <h3 style="font-size: 1.1rem; margin-bottom: 0.75rem;">選別実績</h3>
             </div>
             
             <div class="tabs" id="locationTabs"></div>
