--- a/qcreport.html
+++ b/qcreport.html
@@ -792,25 +792,25 @@
           </div>
         </div>
         
+        <!-- 対応中の案件 -->
+        <div class="card mb-1">
+          <h3 style="margin-bottom: 0.75rem; font-size: 1.1rem;">📁 対応中の案件</h3>
+          <div id="dashCasesList"></div>
+        </div>
+
         <!-- 未完了項目リスト -->
         <div class="grid-2 mb-1" style="align-items: start;">
-          <!-- 未完了ステップ -->
-          <div class="card">
-            <h3 style="font-size: 1.1rem; margin-bottom: 0.75rem; color: #e74c3c;">⚠️ 未完了ステップ</h3>
-            <div id="incompleteSteps"></div>
-          </div>
-
           <!-- 未完了選別 -->
           <div class="card">
             <h3 style="font-size: 1.1rem; margin-bottom: 0.75rem; color: #f39c12;">📋 選別未完了</h3>
             <div id="incompleteInspections"></div>
           </div>
-        </div>
 
-        <!-- 案件一覧 -->
-        <div class="card">
-          <h3 style="margin-bottom: 0.75rem; font-size: 1.1rem;">対応中の案件</h3>
-          <div id="dashCasesList"></div>
+          <!-- 未完了ステップ -->
+          <div class="card">
+            <h3 style="font-size: 1.1rem; margin-bottom: 0.75rem; color: #e74c3c;">⚠️ 未完了ステップ</h3>
+            <div id="incompleteSteps"></div>
+          </div>
         </div>
       </div>
     </div>
