--- a/senbetsu.html
+++ b/senbetsu.html
@@ -665,7 +665,7 @@
 
       showAlert('選別実績を登録しました');
 
-      const ok = confirm('ラインへの転送は完了しましたか？');
+      const ok = confirm('登録しました');
       if (!ok) {
         showAlert('ライン転送が未完了の場合は、忘れずに実施してください。');
       }
