--- a/chokotei.html
+++ b/chokotei.html
@@ -338,7 +338,7 @@ body.pdf-export .kpi .v {
 </div>
 
 <!-- 🎯 マーク異常（直近48h） ← トレンドより上に移動 -->
-<div class="section-title" style="margin-top:14px">🎯 マークした異常のモニタ（直近48h）</div>
+<div class="section-title" style="margin-top:14px">🎯 マークした異常のモニタ</div>
 <div class="marked-grid" id="markedGrid"></div>
 
 <!-- 📈 粒度別トレンドTOP3 -->
