--- a/qctaskview.html
+++ b/qctaskview.html
@@ -688,7 +688,12 @@
         .calendar-event .event-assignee { font-size: 9px; opacity: 0.8; }
         .calendar-event.task-done .event-defect,
         .calendar-event.task-done .event-task { text-decoration: line-through; }
-
+.calendar-event.internal-done { background: #e5e7eb; color: #6b7280; border-left: 3px solid #9ca3af; opacity: 0.7; }
+.calendar-event.internal-done .event-defect,
+.calendar-event.internal-done .event-type-label { text-decoration: line-through; }
+.calendar-event.customer-done { background: #e5e7eb; color: #6b7280; border-left: 3px solid #9ca3af; opacity: 0.7; }
+.calendar-event.customer-done .event-defect,
+.calendar-event.customer-done .event-type-label { text-decoration: line-through; }
         /* カレンダーイベント詳細モーダル */
         .calendar-detail-overlay{
           position: fixed;
@@ -2104,25 +2109,27 @@ return `<div class="case-card ${(c.closed || c.measureStatus === '7') ? 'is-clos
             const filteredCases = caseFilter === 'all' ? cases : cases.filter(c => c.id === caseFilter);
             filteredCases.forEach(c => {
                 // 社内回答期日
-                if (c.internalDeadline) addEvent(c.internalDeadline, { 
-                    type: 'internal', 
-                    caseId: c.id,
-                    caseName: c.refNo || '---',
-                    defect: c.defect || '',
-                    eventType: 'deadline',
-                    deadlineType: '社内回答期日',
-                    date: c.internalDeadline
-                });
-                // 客先回答期日
-                if (c.customerDeadline) addEvent(c.customerDeadline, { 
-                    type: 'customer', 
-                    caseId: c.id,
-                    caseName: c.refNo || '---',
-                    defect: c.defect || '',
-                    eventType: 'deadline',
-                    deadlineType: '客先回答期日',
-                    date: c.customerDeadline
-                });
+if (c.internalDeadline) addEvent(c.internalDeadline, { 
+    type: c.internalReportStatus === '2' ? 'internal-done' : 'internal',  // ← ここを変更
+    caseId: c.id,
+    caseName: c.refNo || '---',
+    defect: c.defect || '',
+    eventType: 'deadline',
+    deadlineType: '社内回答期日',
+    date: c.internalDeadline,
+    isCompleted: c.internalReportStatus === '2'  // ← 追加
+});
+// 客先回答期日
+if (c.customerDeadline) addEvent(c.customerDeadline, { 
+    type: c.customerReportStatus === '2' ? 'customer-done' : 'customer',  // ← ここを変更
+    caseId: c.id,
+    caseName: c.refNo || '---',
+    defect: c.defect || '',
+    eventType: 'deadline',
+    deadlineType: '客先回答期日',
+    date: c.customerDeadline,
+    isCompleted: c.customerReportStatus === '2'  // ← 追加
+});
                 // タスク
                 (c.tasks || []).forEach((t, idx) => {
                     if (t.deadline) {
