--- a/qctaskview.html
+++ b/qctaskview.html
@@ -1643,7 +1643,38 @@
         const reportLabels = {'1': '未提出', '2': '社内提出済', '3': '客先提出済'};
         const reportLabelsShort = {'1': '未提出', '2': '社内提出', '3': '客先提出'};
         const categoryLabels = {'1': '現場確認', '2': '横にらみ', '3': '原因調査', '4': '対策実施', '5': '効果確認', '6': '標準化', '7': '再発防止'};
+// ===== Wake Lock（自動スリープ防止） =====
+let wakeLock = null;
 
+async function requestWakeLock() {
+    if ('wakeLock' in navigator) {
+        try {
+            wakeLock = await navigator.wakeLock.request('screen');
+            console.log('Wake Lock: 有効化されました');
+            
+            // ロックが解除された時の処理
+            wakeLock.addEventListener('release', () => {
+                console.log('Wake Lock: 解除されました');
+            });
+        } catch (err) {
+            console.log('Wake Lock エラー:', err.message);
+        }
+    } else {
+        console.log('Wake Lock API: このブラウザでは非対応です');
+    }
+}
+
+// ページが再表示された時にWake Lockを再取得
+document.addEventListener('visibilitychange', async () => {
+    if (document.visibilityState === 'visible' && wakeLock === null) {
+        await requestWakeLock();
+    }
+});
+
+// アプリ起動時にWake Lockを取得
+document.addEventListener('DOMContentLoaded', () => {
+    requestWakeLock();
+});
         function initFirebase() {
             try {
                 firebase.initializeApp({
